[package]
name = "exothermic"
version = "0.1.0"
authors = ["jaron"]
license = " AGPL-3.0"
description = "WIP SDL based GUI library for rust"
repository = "https://github.com/jshulver/exothermic"
[dependencies]
xml-rs = "0.6.0"

[dependencies.sdl2]
version = "0.30"
default-features = false
features = ["ttf","image","gfx","mixer"]
